# ath_man_v2

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: alembic.ini  env.py
backend/app/: config.py  main.py
backend/tests/: conftest.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
